--- a/readme.html
+++ b/readme.html
@@ -369,8 +369,11 @@ summary {
 </div>
 
 
-<div id="section" class="section level2">
-<h2></h2>
+<div id="interessante-links" class="section level2">
+<h2>Interessante Links</h2>
+<ul>
+<li><a href="https://www.divi.de/register/intensivregister?view=items">Intensivregister</a></li>
+</ul>
 </div>
 
 
